# bowler-kinematics-nlopt

./: .gitignore  CMakeLists.txt  main.cpp  solver.cpp
src/: solver.cpp
